--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -2052,6 +2052,11 @@
     "邀请获得额度": "Invitation quota",
     "邀请链接": "Invitation link",
     "邀请链接已复制到剪切板": "Invitation link has been copied to clipboard",
+    "充值返利百分比": "Top-up rebate percentage",
+    "最大返利次数": "Maximum rebate times",
+    "被邀请人充值时，按此百分比返利给邀请人": "When invitee tops up, rebate this percentage to the inviter",
+    "被邀请人前N次充值可获得返利，0表示不返利": "Invitee's first N top-ups can get rebate, 0 means no rebate",
+    "次": "times",
     "邮件通知": "Email notification",
     "邮箱": "Email",
     "邮箱地址": "Email address",
