--- a/web/src/i18n/locales/zh.json
+++ b/web/src/i18n/locales/zh.json
@@ -2039,6 +2039,11 @@
     "邀请获得额度": "邀请获得额度",
     "邀请链接": "邀请链接",
     "邀请链接已复制到剪切板": "邀请链接已复制到剪切板",
+    "充值返利百分比": "充值返利百分比",
+    "最大返利次数": "最大返利次数",
+    "被邀请人充值时，按此百分比返利给邀请人": "被邀请人充值时，按此百分比返利给邀请人",
+    "被邀请人前N次充值可获得返利，0表示不返利": "被邀请人前N次充值可获得返利，0表示不返利",
+    "次": "次",
     "邮件通知": "邮件通知",
     "邮箱": "邮箱",
     "邮箱地址": "邮箱地址",
