--- a/web/src/i18n/locales/zh.json
+++ b/web/src/i18n/locales/zh.json
@@ -2213,6 +2213,18 @@
     "随机种子 (留空为随机)": "随机种子 (留空为随机)",
     "跨分组重试": "跨分组重试",
     "跨分组": "跨分组",
-    "开启后，当前分组渠道失败时会按顺序尝试下一个分组的渠道": "开启后，当前分组渠道失败时会按顺序尝试下一个分组的渠道"
+    "开启后，当前分组渠道失败时会按顺序尝试下一个分组的渠道": "开启后，当前分组渠道失败时会按顺序尝试下一个分组的渠道",
+    "充值返利": "充值返利",
+    "邀请好友充值，您也能获得奖励": "邀请好友充值，您也能获得奖励",
+    "返利比例": "返利比例",
+    "返利次数": "返利次数",
+    "您邀请的好友每次充值，您都可获得其充值额度的": "您邀请的好友每次充值，您都可获得其充值额度的",
+    "作为返利": "作为返利",
+    "每位好友的前": "每位好友的前",
+    "次充值可获得返利奖励": "次充值可获得返利奖励",
+    "返利将自动计入您的邀请奖励额度，可划转到账户余额使用": "返利将自动计入您的邀请奖励额度，可划转到账户余额使用",
+    "邀请好友注册后充值，您可获得其充值额度": "邀请好友注册后充值，您可获得其充值额度",
+    "的返利奖励！前": "的返利奖励！前",
+    "次充值均可返利。": "次充值均可返利。"
   }
 }
