增加seo设置及seo优化

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -358,6 +358,15 @@
     "保存通用设置": "Save General Settings",
     "保存邮箱域名白名单设置": "Save Email Domain Whitelist Settings",
     "保存额度设置": "Save Quota Settings",
+    "保存 SEO 设置": "Save SEO Settings",
+    "保存成功，重启服务后生效": "Saved successfully, restart service to take effect",
+    "SEO 设置": "SEO Settings",
+    "SEO 设置用于优化搜索引擎收录，修改后需要重启服务才能生效": "SEO settings are used to optimize search engine indexing. Changes require a service restart to take effect",
+    "网站描述": "Website Description",
+    "用于搜索引擎展示的网站描述，建议 50-160 字符": "Website description for search engines, recommended 50-160 characters",
+    "SEO 关键词": "SEO Keywords",
+    "多个关键词用英文逗号分隔，例如：OpenAI,ChatGPT,API,Claude,Gemini": "Separate multiple keywords with commas, e.g.: OpenAI,ChatGPT,API,Claude,Gemini",
+    "推荐关键词：OpenAI,ChatGPT,API,Claude,Gemini,AI接口,大模型,人工智能,API网关,GPT-4,AI代理,模型聚合": "Recommended keywords: OpenAI,ChatGPT,API,Claude,Gemini,AI API,LLM,Artificial Intelligence,API Gateway,GPT-4,AI Proxy,Model Aggregation",
     "修复数据库一致性": "Fix database consistency",
     "修改为": "Modify to",
     "修改子渠道优先级": "Modify sub-channel priority",
