--- a/web/src/i18n/locales/zh.json
+++ b/web/src/i18n/locales/zh.json
@@ -355,6 +355,15 @@
     "保存通用设置": "保存通用设置",
     "保存邮箱域名白名单设置": "保存邮箱域名白名单设置",
     "保存额度设置": "保存额度设置",
+    "保存 SEO 设置": "保存 SEO 设置",
+    "保存成功，重启服务后生效": "保存成功，重启服务后生效",
+    "SEO 设置": "SEO 设置",
+    "SEO 设置用于优化搜索引擎收录，修改后需要重启服务才能生效": "SEO 设置用于优化搜索引擎收录，修改后需要重启服务才能生效",
+    "网站描述": "网站描述",
+    "用于搜索引擎展示的网站描述，建议 50-160 字符": "用于搜索引擎展示的网站描述，建议 50-160 字符",
+    "SEO 关键词": "SEO 关键词",
+    "多个关键词用英文逗号分隔，例如：OpenAI,ChatGPT,API,Claude,Gemini": "多个关键词用英文逗号分隔，例如：OpenAI,ChatGPT,API,Claude,Gemini",
+    "推荐关键词：OpenAI,ChatGPT,API,Claude,Gemini,AI接口,大模型,人工智能,API网关,GPT-4,AI代理,模型聚合": "推荐关键词：OpenAI,ChatGPT,API,Claude,Gemini,AI接口,大模型,人工智能,API网关,GPT-4,AI代理,模型聚合",
     "修复数据库一致性": "修复数据库一致性",
     "修改为": "修改为",
     "修改子渠道优先级": "修改子渠道优先级",
